<resources>
    <string name="app_name">AnimaBeyondFantasy</string>
    <string name="characterCategoryLabel">Categoría</string>
    <string name="characterLevelLabel">Nivel</string>
    <string name="noCharacter">No character</string>
    <string name="noCategory">Sin categoria</string>
    <string name="characterGenderLabel">Genero</string>
    <string name="characterAgeLabel">Edad</string>
    <string name="characterOriginLabel">Origen</string>
    <string name="characterHeightLabel">Altura</string>
    <string name="characterWeightLabel">Peso</string>
    <string name="characterHairColorLabel">Color de pelo</string>
    <string name="characterEyeColorLabel">Color de ojos</string>
    <string name="characteristicLabel">Característica</string>
    <string name="characteristicBaseLabel">Base</string>
    <string name="characteristicBonusLabel">Bono</string>
    <string name="characteristicFinalLabel">Final</string>

    <string name="characteristicRollPick">Seleccione tirada de características</string>
    <string name="drawer_open">Abrir menu</string>
    <string name="drawer_close">Cerrar menu</string>
    <string name="generalFragementTitle">General</string>
    <string name="secundaryFragmentTitle">Secundarias</string>

    <string name="exitSheetWarningTitle">Salir de la ficha</string>
    <string name="exitSheetWarning">Asegurate de haber guardado la ficha antes de salir</string>


    <string name="strength">Fuerza</string>
    <string name="dexterity">Destreza</string>
    <string name="agility">Agilidad</string>
    <string name="constitution">Constitución</string>
    <string name="intelligence">Inteligencia</string>
    <string name="perception">Percepción</string>
    <string name="will">Voluntad</string>
    <string name="power">Poder</string>
    <string name="appearance">Apariencia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="sheetTabs">
        <item>General</item>
        <item>Transfondo</item>
        <item>Combate</item>
        <item>Ki</item>
        <item>Magia</item>
        <item>Psíquico</item>
        <item>Secundarias</item>
        <item>PD</item>
        <item>Inventory</item>
        <item>Notas</item>
    </string-array>
    <string-array name="characteristicRolls">
        <item>Custom Roll</item>
    </string-array>
</resources>
