<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp">


    <ImageView
        android:id="@+id/characterPortait"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_rowSpan="8"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/characterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_row="0"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/characterGenderLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/characterGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/characterAgeLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/characterAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/characterOriginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:text="@string/characterOriginLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/characterOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="2"
        android:text="@string/characterHeightLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/characterHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="3"
        android:text="@string/characterWeightLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/characterWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="4"
        android:text="@string/characterHairColorLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/characterHairColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="5"
        android:text="@string/characterEyeColorLabel"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/characterEyeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />
</GridLayout>